--- a/Swlh.WebApp/Views/Authentication/UpdateAccount.cshtml
+++ b/Swlh.WebApp/Views/Authentication/UpdateAccount.cshtml
@@ -8,7 +8,7 @@
 }
 
 
-<div class="d-flex justify-content-center align-items-center min-vh-100 bg-white bg-opacity-75 p-4 rounded shadow">
+<div class="d-flex justify-content-center align-items-center min-vh-100 p-4 rounded shadow">
     <div class="card shadow p-4 border-0" style="width: 100%; max-width: 400px;">
         <h3 class="mb-4 text-center">Cập nhật thông tin tài khoản</h3>
         <form asp-controller="@nameof(AuthenticationController)[..^10]"
