--- a/Swlh.WebApp/Views/Authentication/ChangePassword.cshtml
+++ b/Swlh.WebApp/Views/Authentication/ChangePassword.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Đổi mật khẩu";
 }
 
-<div class="d-flex justify-content-center align-items-center min-vh-100 bg-white bg-opacity-75 p-4 rounded shadow">
+<div class="d-flex justify-content-center align-items-center min-vh-100 p-4 rounded shadow">
     <div class="card shadow p-4 border-0" style="width: 100%; max-width: 400px;">
         <h3 class="mb-4 text-center">Thay đổi mật khẩu</h3>
         <form asp-controller="@nameof(AuthenticationController)[..^10]"
@@ -40,7 +40,6 @@
                 <div class="col">
                     <button type="submit" class="w-100 btn btn-primary">Lưu</button>
                 </div>
-
             </div>
             <input type="hidden" name="backurl" value="@Context.Request.Query["backurl"]" />
         </form>
