--- a/Swlh.WebApp/Views/Authentication/Register.cshtml
+++ b/Swlh.WebApp/Views/Authentication/Register.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<div class="d-flex justify-content-center align-items-center min-vh-100 bg-white bg-opacity-75 p-4 rounded shadow">
+<div class="d-flex justify-content-center align-items-center min-vh-100 p-4 rounded shadow">
 
     
     <div class="card shadow p-4 border-0" style="width: 100%; max-width: 400px;">
