--- a/Swlh.WebApp/Views/Shared/_Blank.cshtml
+++ b/Swlh.WebApp/Views/Shared/_Blank.cshtml
@@ -8,14 +8,13 @@
     <title>@ViewData["Title"] - Swlh</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-icons.css" />
-    @* <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet"> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Swlh.WebApp.styles.css" asp-append-version="true" />
     
 
     <style>
         body {
-            background-image: url('/img/background1.jpg');
+            background-image: url('/img/background.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
